parser.output
Terminals unused in grammar

   NEW


Rules useless in parser due to conflicts

   51 argumento: CONST_CADENA


State 76 conflicts: 2 reduce/reduce
State 83 conflicts: 10 shift/reduce
State 123 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: sentencia_lista

    2 sentencia_lista: sentencia sentencia_lista
    3                | /* empty */

    4 sentencia: declaracion FIN_SENTENCIA
    5          | asignacion FIN_SENTENCIA
    6          | impresion FIN_SENTENCIA
    7          | lectura FIN_SENTENCIA
    8          | estructura_control
    9          | comentario
   10          | funcion
   11          | RETURN expresion FIN_SENTENCIA

   12 funcion: FUNC IDENTIFICADOR PARENTESIS_A parametros PARENTESIS_C bloque_sentencias

   13 parametros: /* empty */
   14           | lista_parametros

   15 lista_parametros: IDENTIFICADOR
   16                 | lista_parametros CHAR_COMA IDENTIFICADOR

   17 llamada_funcion: IDENTIFICADOR PARENTESIS_A argumentos PARENTESIS_C

   18 declaracion: tipo IDENTIFICADOR
   19            | tipo IDENTIFICADOR OP_IGUAL expresion

   20 tipo: INTEGER
   21     | FLOAT
   22     | BOOLEAN

   23 asignacion: IDENTIFICADOR OP_IGUAL expresion

   24 expresion: expresion OP_SUMA expresion
   25          | expresion OP_RESTA expresion
   26          | expresion OP_MULT expresion
   27          | expresion OP_DIV expresion
   28          | expresion OP_COMP_IGUAL expresion
   29          | expresion OP_DISTINTO expresion
   30          | expresion OP_MAYOR expresion
   31          | expresion OP_MENOR expresion
   32          | expresion OP_MAYORIGUAL expresion
   33          | expresion OP_MENORIGUAL expresion
   34          | OP_NEGACION expresion
   35          | PARENTESIS_A expresion PARENTESIS_C
   36          | CONST_INTEGER
   37          | CONST_FLOAT
   38          | CONST_CADENA
   39          | IDENTIFICADOR
   40          | llamada_funcion

   41 estructura_control: IF PARENTESIS_A expresion PARENTESIS_C bloque_sentencias
   42                   | IF PARENTESIS_A expresion PARENTESIS_C bloque_sentencias ELIF PARENTESIS_A expresion PARENTESIS_C bloque_sentencias
   43                   | IF PARENTESIS_A expresion PARENTESIS_C bloque_sentencias ELSE bloque_sentencias
   44                   | WHILE PARENTESIS_A expresion PARENTESIS_C bloque_sentencias
   45                   | FOR PARENTESIS_A asignacion CHAR_PUNTOYCOMA expresion CHAR_PUNTOYCOMA asignacion PARENTESIS_C bloque_sentencias
   46                   | ELSE bloque_sentencias

   47 bloque_sentencias: LLAVE_A sentencia_lista LLAVE_C

   48 impresion: PRINT PARENTESIS_A argumentos PARENTESIS_C

   49 argumentos: argumento
   50           | argumento CHAR_COMA argumentos

   51 argumento: CONST_CADENA
   52          | expresion

   53 lectura: READ PARENTESIS_A IDENTIFICADOR PARENTESIS_C

   54 comentario: INI_COMENTARIO texto FIN_COMENTARIO

   55 texto: texto elemento_texto
   56      | elemento_texto

   57 elemento_texto: CONST_CADENA
   58               | IDENTIFICADOR
   59               | CONST_INTEGER
   60               | CONST_FLOAT
   61               | OP_SUMA
   62               | OP_RESTA
   63               | OP_MULT
   64               | OP_DIV
   65               | OP_IGUAL
   66               | OP_MAYOR
   67               | OP_MENOR
   68               | OP_MAYORIGUAL
   69               | OP_MENORIGUAL
   70               | OP_COMP_IGUAL
   71               | OP_NEGACION
   72               | OP_DISTINTO
   73               | CHAR_COMA
   74               | CHAR_PUNTO
   75               | CHAR_PUNTOYCOMA
   76               | CHAR_DOSPUNTOS
   77               | FIN_SENTENCIA


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 41 42 43
WHILE (259) 44
FOR (260) 45
ELSE (261) 43 46
ELIF (262) 42
INTEGER (263) 20
FLOAT (264) 21
BOOLEAN (265) 22
PRINT (266) 48
READ (267) 53
NEW (268)
FUNC (269) 12
RETURN (270) 11
IDENTIFICADOR (271) 12 15 16 17 18 19 23 39 53 58
CONST_INTEGER (272) 36 59
CONST_FLOAT (273) 37 60
CONST_CADENA (274) 38 51 57
OP_SUMA (275) 24 61
OP_RESTA (276) 25 62
OP_MULT (277) 26 63
OP_DIV (278) 27 64
OP_IGUAL (279) 19 23 65
OP_MAYOR (280) 30 66
OP_MENOR (281) 31 67
OP_MAYORIGUAL (282) 32 68
OP_MENORIGUAL (283) 33 69
OP_COMP_IGUAL (284) 28 70
OP_NEGACION (285) 34 71
OP_DISTINTO (286) 29 72
LLAVE_A (287) 47
LLAVE_C (288) 47
PARENTESIS_A (289) 12 17 35 41 42 43 44 45 48 53
PARENTESIS_C (290) 12 17 35 41 42 43 44 45 48 53
FIN_SENTENCIA (291) 4 5 6 7 11 77
CHAR_COMA (292) 16 50 73
CHAR_PUNTO (293) 74
CHAR_PUNTOYCOMA (294) 45 75
CHAR_DOSPUNTOS (295) 76
INI_COMENTARIO (296) 54
FIN_COMENTARIO (297) 54


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
programa (44)
    on left: 1, on right: 0
sentencia_lista (45)
    on left: 2 3, on right: 1 2 47
sentencia (46)
    on left: 4 5 6 7 8 9 10 11, on right: 2
funcion (47)
    on left: 12, on right: 10
parametros (48)
    on left: 13 14, on right: 12
lista_parametros (49)
    on left: 15 16, on right: 14 16
llamada_funcion (50)
    on left: 17, on right: 40
declaracion (51)
    on left: 18 19, on right: 4
tipo (52)
    on left: 20 21 22, on right: 18 19
asignacion (53)
    on left: 23, on right: 5 45
expresion (54)
    on left: 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40, on right:
    11 19 23 24 25 26 27 28 29 30 31 32 33 34 35 41 42 43 44 45 52
estructura_control (55)
    on left: 41 42 43 44 45 46, on right: 8
bloque_sentencias (56)
    on left: 47, on right: 12 41 42 43 44 45 46
impresion (57)
    on left: 48, on right: 6
argumentos (58)
    on left: 49 50, on right: 17 48 50
argumento (59)
    on left: 51 52, on right: 49 50
lectura (60)
    on left: 53, on right: 7
comentario (61)
    on left: 54, on right: 9
texto (62)
    on left: 55 56, on right: 54 55
elemento_texto (63)
    on left: 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74
    75 76 77, on right: 55 56


State 0

    0 $accept: . programa $end

    IF              shift, and go to state 1
    WHILE           shift, and go to state 2
    FOR             shift, and go to state 3
    ELSE            shift, and go to state 4
    INTEGER         shift, and go to state 5
    FLOAT           shift, and go to state 6
    BOOLEAN         shift, and go to state 7
    PRINT           shift, and go to state 8
    READ            shift, and go to state 9
    FUNC            shift, and go to state 10
    RETURN          shift, and go to state 11
    IDENTIFICADOR   shift, and go to state 12
    INI_COMENTARIO  shift, and go to state 13

    $default  reduce using rule 3 (sentencia_lista)

    programa            go to state 14
    sentencia_lista     go to state 15
    sentencia           go to state 16
    funcion             go to state 17
    declaracion         go to state 18
    tipo                go to state 19
    asignacion          go to state 20
    estructura_control  go to state 21
    impresion           go to state 22
    lectura             go to state 23
    comentario          go to state 24


State 1

   41 estructura_control: IF . PARENTESIS_A expresion PARENTESIS_C bloque_sentencias
   42                   | IF . PARENTESIS_A expresion PARENTESIS_C bloque_sentencias ELIF PARENTESIS_A expresion PARENTESIS_C bloque_sentencias
   43                   | IF . PARENTESIS_A expresion PARENTESIS_C bloque_sentencias ELSE bloque_sentencias

    PARENTESIS_A  shift, and go to state 25


State 2

   44 estructura_control: WHILE . PARENTESIS_A expresion PARENTESIS_C bloque_sentencias

    PARENTESIS_A  shift, and go to state 26


State 3

   45 estructura_control: FOR . PARENTESIS_A asignacion CHAR_PUNTOYCOMA expresion CHAR_PUNTOYCOMA asignacion PARENTESIS_C bloque_sentencias

    PARENTESIS_A  shift, and go to state 27


State 4

   46 estructura_control: ELSE . bloque_sentencias

    LLAVE_A  shift, and go to state 28

    bloque_sentencias  go to state 29


State 5

   20 tipo: INTEGER .

    $default  reduce using rule 20 (tipo)


State 6

   21 tipo: FLOAT .

    $default  reduce using rule 21 (tipo)


State 7

   22 tipo: BOOLEAN .

    $default  reduce using rule 22 (tipo)


State 8

   48 impresion: PRINT . PARENTESIS_A argumentos PARENTESIS_C

    PARENTESIS_A  shift, and go to state 30


State 9

   53 lectura: READ . PARENTESIS_A IDENTIFICADOR PARENTESIS_C

    PARENTESIS_A  shift, and go to state 31


State 10

   12 funcion: FUNC . IDENTIFICADOR PARENTESIS_A parametros PARENTESIS_C bloque_sentencias

    IDENTIFICADOR  shift, and go to state 32


State 11

   11 sentencia: RETURN . expresion FIN_SENTENCIA

    IDENTIFICADOR  shift, and go to state 33
    CONST_INTEGER  shift, and go to state 34
    CONST_FLOAT    shift, and go to state 35
    CONST_CADENA   shift, and go to state 36
    OP_NEGACION    shift, and go to state 37
    PARENTESIS_A   shift, and go to state 38

    llamada_funcion  go to state 39
    expresion        go to state 40


State 12

   23 asignacion: IDENTIFICADOR . OP_IGUAL expresion

    OP_IGUAL  shift, and go to state 41


State 13

   54 comentario: INI_COMENTARIO . texto FIN_COMENTARIO

    IDENTIFICADOR    shift, and go to state 42
    CONST_INTEGER    shift, and go to state 43
    CONST_FLOAT      shift, and go to state 44
    CONST_CADENA     shift, and go to state 45
    OP_SUMA          shift, and go to state 46
    OP_RESTA         shift, and go to state 47
    OP_MULT          shift, and go to state 48
    OP_DIV           shift, and go to state 49
    OP_IGUAL         shift, and go to state 50
    OP_MAYOR         shift, and go to state 51
    OP_MENOR         shift, and go to state 52
    OP_MAYORIGUAL    shift, and go to state 53
    OP_MENORIGUAL    shift, and go to state 54
    OP_COMP_IGUAL    shift, and go to state 55
    OP_NEGACION      shift, and go to state 56
    OP_DISTINTO      shift, and go to state 57
    FIN_SENTENCIA    shift, and go to state 58
    CHAR_COMA        shift, and go to state 59
    CHAR_PUNTO       shift, and go to state 60
    CHAR_PUNTOYCOMA  shift, and go to state 61
    CHAR_DOSPUNTOS   shift, and go to state 62

    texto           go to state 63
    elemento_texto  go to state 64


State 14

    0 $accept: programa . $end

    $end  shift, and go to state 65


State 15

    1 programa: sentencia_lista .

    $default  reduce using rule 1 (programa)


State 16

    2 sentencia_lista: sentencia . sentencia_lista

    IF              shift, and go to state 1
    WHILE           shift, and go to state 2
    FOR             shift, and go to state 3
    ELSE            shift, and go to state 4
    INTEGER         shift, and go to state 5
    FLOAT           shift, and go to state 6
    BOOLEAN         shift, and go to state 7
    PRINT           shift, and go to state 8
    READ            shift, and go to state 9
    FUNC            shift, and go to state 10
    RETURN          shift, and go to state 11
    IDENTIFICADOR   shift, and go to state 12
    INI_COMENTARIO  shift, and go to state 13

    $default  reduce using rule 3 (sentencia_lista)

    sentencia_lista     go to state 66
    sentencia           go to state 16
    funcion             go to state 17
    declaracion         go to state 18
    tipo                go to state 19
    asignacion          go to state 20
    estructura_control  go to state 21
    impresion           go to state 22
    lectura             go to state 23
    comentario          go to state 24


State 17

   10 sentencia: funcion .

    $default  reduce using rule 10 (sentencia)


State 18

    4 sentencia: declaracion . FIN_SENTENCIA

    FIN_SENTENCIA  shift, and go to state 67


State 19

   18 declaracion: tipo . IDENTIFICADOR
   19            | tipo . IDENTIFICADOR OP_IGUAL expresion

    IDENTIFICADOR  shift, and go to state 68


State 20

    5 sentencia: asignacion . FIN_SENTENCIA

    FIN_SENTENCIA  shift, and go to state 69


State 21

    8 sentencia: estructura_control .

    $default  reduce using rule 8 (sentencia)


State 22

    6 sentencia: impresion . FIN_SENTENCIA

    FIN_SENTENCIA  shift, and go to state 70


State 23

    7 sentencia: lectura . FIN_SENTENCIA

    FIN_SENTENCIA  shift, and go to state 71


State 24

    9 sentencia: comentario .

    $default  reduce using rule 9 (sentencia)


State 25

   41 estructura_control: IF PARENTESIS_A . expresion PARENTESIS_C bloque_sentencias
   42                   | IF PARENTESIS_A . expresion PARENTESIS_C bloque_sentencias ELIF PARENTESIS_A expresion PARENTESIS_C bloque_sentencias
   43                   | IF PARENTESIS_A . expresion PARENTESIS_C bloque_sentencias ELSE bloque_sentencias

    IDENTIFICADOR  shift, and go to state 33
    CONST_INTEGER  shift, and go to state 34
    CONST_FLOAT    shift, and go to state 35
    CONST_CADENA   shift, and go to state 36
    OP_NEGACION    shift, and go to state 37
    PARENTESIS_A   shift, and go to state 38

    llamada_funcion  go to state 39
    expresion        go to state 72


State 26

   44 estructura_control: WHILE PARENTESIS_A . expresion PARENTESIS_C bloque_sentencias

    IDENTIFICADOR  shift, and go to state 33
    CONST_INTEGER  shift, and go to state 34
    CONST_FLOAT    shift, and go to state 35
    CONST_CADENA   shift, and go to state 36
    OP_NEGACION    shift, and go to state 37
    PARENTESIS_A   shift, and go to state 38

    llamada_funcion  go to state 39
    expresion        go to state 73


State 27

   45 estructura_control: FOR PARENTESIS_A . asignacion CHAR_PUNTOYCOMA expresion CHAR_PUNTOYCOMA asignacion PARENTESIS_C bloque_sentencias

    IDENTIFICADOR  shift, and go to state 12

    asignacion  go to state 74


State 28

   47 bloque_sentencias: LLAVE_A . sentencia_lista LLAVE_C

    IF              shift, and go to state 1
    WHILE           shift, and go to state 2
    FOR             shift, and go to state 3
    ELSE            shift, and go to state 4
    INTEGER         shift, and go to state 5
    FLOAT           shift, and go to state 6
    BOOLEAN         shift, and go to state 7
    PRINT           shift, and go to state 8
    READ            shift, and go to state 9
    FUNC            shift, and go to state 10
    RETURN          shift, and go to state 11
    IDENTIFICADOR   shift, and go to state 12
    INI_COMENTARIO  shift, and go to state 13

    $default  reduce using rule 3 (sentencia_lista)

    sentencia_lista     go to state 75
    sentencia           go to state 16
    funcion             go to state 17
    declaracion         go to state 18
    tipo                go to state 19
    asignacion          go to state 20
    estructura_control  go to state 21
    impresion           go to state 22
    lectura             go to state 23
    comentario          go to state 24


State 29

   46 estructura_control: ELSE bloque_sentencias .

    $default  reduce using rule 46 (estructura_control)


State 30

   48 impresion: PRINT PARENTESIS_A . argumentos PARENTESIS_C

    IDENTIFICADOR  shift, and go to state 33
    CONST_INTEGER  shift, and go to state 34
    CONST_FLOAT    shift, and go to state 35
    CONST_CADENA   shift, and go to state 76
    OP_NEGACION    shift, and go to state 37
    PARENTESIS_A   shift, and go to state 38

    llamada_funcion  go to state 39
    expresion        go to state 77
    argumentos       go to state 78
    argumento        go to state 79


State 31

   53 lectura: READ PARENTESIS_A . IDENTIFICADOR PARENTESIS_C

    IDENTIFICADOR  shift, and go to state 80


State 32

   12 funcion: FUNC IDENTIFICADOR . PARENTESIS_A parametros PARENTESIS_C bloque_sentencias

    PARENTESIS_A  shift, and go to state 81


State 33

   17 llamada_funcion: IDENTIFICADOR . PARENTESIS_A argumentos PARENTESIS_C
   39 expresion: IDENTIFICADOR .

    PARENTESIS_A  shift, and go to state 82

    $default  reduce using rule 39 (expresion)


State 34

   36 expresion: CONST_INTEGER .

    $default  reduce using rule 36 (expresion)


State 35

   37 expresion: CONST_FLOAT .

    $default  reduce using rule 37 (expresion)


State 36

   38 expresion: CONST_CADENA .

    $default  reduce using rule 38 (expresion)


State 37

   34 expresion: OP_NEGACION . expresion

    IDENTIFICADOR  shift, and go to state 33
    CONST_INTEGER  shift, and go to state 34
    CONST_FLOAT    shift, and go to state 35
    CONST_CADENA   shift, and go to state 36
    OP_NEGACION    shift, and go to state 37
    PARENTESIS_A   shift, and go to state 38

    llamada_funcion  go to state 39
    expresion        go to state 83


State 38

   35 expresion: PARENTESIS_A . expresion PARENTESIS_C

    IDENTIFICADOR  shift, and go to state 33
    CONST_INTEGER  shift, and go to state 34
    CONST_FLOAT    shift, and go to state 35
    CONST_CADENA   shift, and go to state 36
    OP_NEGACION    shift, and go to state 37
    PARENTESIS_A   shift, and go to state 38

    llamada_funcion  go to state 39
    expresion        go to state 84


State 39

   40 expresion: llamada_funcion .

    $default  reduce using rule 40 (expresion)


State 40

   11 sentencia: RETURN expresion . FIN_SENTENCIA
   24 expresion: expresion . OP_SUMA expresion
   25          | expresion . OP_RESTA expresion
   26          | expresion . OP_MULT expresion
   27          | expresion . OP_DIV expresion
   28          | expresion . OP_COMP_IGUAL expresion
   29          | expresion . OP_DISTINTO expresion
   30          | expresion . OP_MAYOR expresion
   31          | expresion . OP_MENOR expresion
   32          | expresion . OP_MAYORIGUAL expresion
   33          | expresion . OP_MENORIGUAL expresion

    OP_SUMA        shift, and go to state 85
    OP_RESTA       shift, and go to state 86
    OP_MULT        shift, and go to state 87
    OP_DIV         shift, and go to state 88
    OP_MAYOR       shift, and go to state 89
    OP_MENOR       shift, and go to state 90
    OP_MAYORIGUAL  shift, and go to state 91
    OP_MENORIGUAL  shift, and go to state 92
    OP_COMP_IGUAL  shift, and go to state 93
    OP_DISTINTO    shift, and go to state 94
    FIN_SENTENCIA  shift, and go to state 95


State 41

   23 asignacion: IDENTIFICADOR OP_IGUAL . expresion

    IDENTIFICADOR  shift, and go to state 33
    CONST_INTEGER  shift, and go to state 34
    CONST_FLOAT    shift, and go to state 35
    CONST_CADENA   shift, and go to state 36
    OP_NEGACION    shift, and go to state 37
    PARENTESIS_A   shift, and go to state 38

    llamada_funcion  go to state 39
    expresion        go to state 96


State 42

   58 elemento_texto: IDENTIFICADOR .

    $default  reduce using rule 58 (elemento_texto)


State 43

   59 elemento_texto: CONST_INTEGER .

    $default  reduce using rule 59 (elemento_texto)


State 44

   60 elemento_texto: CONST_FLOAT .

    $default  reduce using rule 60 (elemento_texto)


State 45

   57 elemento_texto: CONST_CADENA .

    $default  reduce using rule 57 (elemento_texto)


State 46

   61 elemento_texto: OP_SUMA .

    $default  reduce using rule 61 (elemento_texto)


State 47

   62 elemento_texto: OP_RESTA .

    $default  reduce using rule 62 (elemento_texto)


State 48
